# stellar-quant

./: .gitignore  CLAUDE.md  CMakeLists.txt  MANIFEST.in  README.md  agent.md  checklist.md  context-notes.md  packages.txt  pyproject.toml  requirements.txt  setup.py
.claude/: CLAUDE.md
docs/: SUBMISSION_REPORT.md
python/: backtest.py  benchmark.py  dashboard.py  data_utils.py  loader.py  main.py
src/: simulator.cpp
